--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
   </head>
   <body>
+    <p id="winner">
+
+    </p>
 
     <table id="game-board">
       <tbody>
@@ -49,6 +52,7 @@
         var noOs = $("#game-board td:contains('o')");
         console.log(noXs);
         console.log(noOs);
+
         if (noXs.length  === noOs.length && noXs.length + noOs.length <= 9){
           $(this).text('x').css("background-color","blue");
           $(this).off("click");
@@ -56,6 +60,21 @@
           $(this).text('o');
           $(this).off("click");
         }
+
+        for (i = 1; i<=3; i++){
+          if ($(".c"+ i).text() ==="xxx" || $(".r"+ i).text()==="xxx"||$(".c"+ i).text() ==="ooo" || $(".r"+ i).text()==="ooo"){
+            $("#game-board td").off("click");
+            $("#winner").text("WE HAVE A WINNER!!");
+            return;
+          }
+        }
+
+        if ($("#1-1, #2-2, #3-3").text() ==="xxx" ||$("#3-1, #2-2, #1-3").text() ==="xxx"
+            || $("#1-1, #2-2, #3-3").text() ==="ooo" ||$("#3-1, #2-2, #1-3").text() ==="ooo" ){
+              $("#game-board td").off("click");
+              $("#winner").text("WE HAVE A WINNER!!");
+              return;
+            }
       });
 
       $("#reset-button").click(function(){
